--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "autodraw",
-  "version": "1.0.1",
-  "description": "auto draw",
+  "name": "autodrawhrsdef",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "hrsdef",
-  "license": "ISC",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/hrsdef/autoDraw.git"
   },
+  "keywords": [
+    "git"
+  ],
+  "author": "hrsdef",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/hrsdef/autoDraw/issues"
   },
